# QShellBridge

./: .gitignore  QShellBridgeApp  QShellBridgeApp.code-workspace  README.md  bridge.py  config.py  ghostshell.py  init_project_structure.sh  makefile  mount_and_ghost.sh  pyproject.toml  qshellbridge  refactor_project_structure.sh  simplified_architecture
qshellbridge/: cli.py  main.py  setup.py
